--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spacy\n",
-    "import pandas as pd\n",
-    "from typing import List, Tuple\n",
-    "from spacy.language import Language\n",
-    "from collections import namedtuple\n"
+    "import os\n",
+    "import sys\n",
+    "sys.path.insert(0, '../src/data/')\n",
+    "from data_cleaning import raw_json_to_clean_df\n",
+    "from data_transformation import transform_clean_df\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import Perceptron\n"
    ]
   },
   {
@@ -44,14 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "sys.path.insert(0, '../src/data/')\n",
-    "from data_cleaning import raw_json_to_clean_df\n",
+    "\n",
     "\n",
     "# read json file and load it as a DataFrame\n",
     "path = '../data/raw_scraped_data.json'\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -126,41 +126,6 @@
        "      <td>masculine</td>\n",
        "      <td>Polish</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>abatacept</td>\n",
-       "      <td>abatacept</td>\n",
-       "      <td>masculine</td>\n",
-       "      <td>French</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>abażur</td>\n",
-       "      <td>abażur</td>\n",
-       "      <td>masculine</td>\n",
-       "      <td>Polish</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>abażurek</td>\n",
-       "      <td>abażurek</td>\n",
-       "      <td>masculine</td>\n",
-       "      <td>Polish</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>abcas</td>\n",
-       "      <td>abca</td>\n",
-       "      <td>masculine</td>\n",
-       "      <td>Polish</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>abcug</td>\n",
-       "      <td>abcug</td>\n",
-       "      <td>masculine</td>\n",
-       "      <td>Polish</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -171,46 +136,342 @@
        "1   abacysta   abacysta  masculine  Polish\n",
        "2  abatacept  abatacept  masculine  Polish\n",
        "3  abatacept  abatacept  masculine  French\n",
-       "4  abatacept  abatacept  masculine  Polish\n",
-       "5  abatacept  abatacept  masculine  French\n",
-       "6     abażur     abażur  masculine  Polish\n",
-       "7   abażurek   abażurek  masculine  Polish\n",
-       "8      abcas       abca  masculine  Polish\n",
-       "9      abcug      abcug  masculine  Polish"
+       "4  abatacept  abatacept  masculine  Polish"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(10)"
+    "df.head(5)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3 Transform and Encode Data\n",
+    "reduce data down to an even amount of examples per language and per gender\n",
+    "encode last 3 letters of each noun"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/capeta/Uni/S2/Ad Morpho/Project/-Morphology-Gender-assignment/notebooks/../src/data/data_transformation.py:14: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "  reduced_df = df.groupby(['lang', 'gender'])['noun', 'lemma', 'gender', 'lang'].sample(n=3000)\n",
+      "/home/capeta/.local/share/virtualenvs/-Morphology-Gender-assignment-lrLn6GZY/lib/python3.10/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>noun</th>\n",
+       "      <th>lemma</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>lang</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2445</th>\n",
+       "      <th>2446</th>\n",
+       "      <th>2447</th>\n",
+       "      <th>2448</th>\n",
+       "      <th>2449</th>\n",
+       "      <th>2450</th>\n",
+       "      <th>2451</th>\n",
+       "      <th>2452</th>\n",
+       "      <th>2453</th>\n",
+       "      <th>2454</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cafétérie</td>\n",
+       "      <td>cafétéria</td>\n",
+       "      <td>feminine</td>\n",
+       "      <td>French</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>iconographie</td>\n",
+       "      <td>iconographie</td>\n",
+       "      <td>feminine</td>\n",
+       "      <td>French</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>oniomanie</td>\n",
+       "      <td>oniomanie</td>\n",
+       "      <td>feminine</td>\n",
+       "      <td>French</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>baïonnette</td>\n",
+       "      <td>baïonnette</td>\n",
+       "      <td>feminine</td>\n",
+       "      <td>French</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Walcourt</td>\n",
+       "      <td>Walcourt</td>\n",
+       "      <td>feminine</td>\n",
+       "      <td>French</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 2459 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           noun         lemma    gender    lang    0    1    2    3    4    5  \\\n",
+       "0     cafétérie     cafétéria  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "1  iconographie  iconographie  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "2     oniomanie     oniomanie  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "3    baïonnette    baïonnette  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "4      Walcourt      Walcourt  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "\n",
+       "   ...  2445  2446  2447  2448  2449  2450  2451  2452  2453  2454  \n",
+       "0  ...   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+       "1  ...   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+       "2  ...   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+       "3  ...   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+       "4  ...   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+       "\n",
+       "[5 rows x 2459 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "\n",
-    "\n",
-    "# fr = j[0]\n",
-    "# ohe = OneHotEncoder(sparse=False, categories='auto')\n",
-    "# transformed = ohe.fit_transform(fr['noun'].to_numpy().reshape(-1, 1))\n"
+    "trans_df = transform_clean_df(df)\n",
+    "trans_df.head(5)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4 Train Data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.1 Define X and y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = pd.DataFrame(y)\n",
-    "w.columns = ['encoding']"
+    "X =  trans_df.iloc[:, 4:]\n",
+    "y = trans_df['gender']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.2 Split data into training and testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 K-NN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8421666666666666"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors=3)\n",
+    "knn.fit(X_train, y_train)\n",
+    "knn.score(X_test, y_test)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.4 Perceptron"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8773333333333333"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Perceptron(random_state=42)\n",
+    "p.fit(X_train, y_train)\n",
+    "p.score(X_test, y_test)"
    ]
   }
  ],
