--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.insert(0, '../src/data/')\n",
+    "sys.path.insert(0, '../src/')\n",
     "from data_cleaning import raw_json_to_clean_df\n",
-    "from data_transformation import transform_clean_df\n",
+    "from data_transformation import transform_clean_df, get_X_y, get_dist\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.linear_model import Perceptron\n"
@@ -47,12 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'method' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# read json file and load it as a DataFrame\u001b[39;00m\n\u001b[1;32m      2\u001b[0m path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m../data/raw_scraped_data.json\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> 3\u001b[0m df \u001b[39m=\u001b[39m raw_json_to_clean_df(path)\n",
+      "File \u001b[0;32m~/Uni/S2/Ad Morpho/Project/-Morphology-Gender-assignment/notebooks/../src/data_cleaning.py:111\u001b[0m, in \u001b[0;36mraw_json_to_clean_df\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mraw_json_to_clean_df\u001b[39m(path: \u001b[39mstr\u001b[39m)\u001b[39m-\u001b[39m\u001b[39m>\u001b[39m pd\u001b[39m.\u001b[39mDataFrame:\n\u001b[1;32m    104\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    105\u001b[0m \u001b[39m    reads in raw data json file , applies filters, \u001b[39;00m\n\u001b[1;32m    106\u001b[0m \u001b[39m    and returns a final and clean df to be used on an NLP model\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[39m        pd.DataFrame\u001b[39;00m\n\u001b[1;32m    110\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 111\u001b[0m     filtered_df \u001b[39m=\u001b[39m initial_filter(pd\u001b[39m.\u001b[39;49mread_json(path))\n\u001b[1;32m    112\u001b[0m     \u001b[39mreturn\u001b[39;00m clean_df(filtered_df)\n",
+      "File \u001b[0;32m~/Uni/S2/Ad Morpho/Project/-Morphology-Gender-assignment/notebooks/../src/data_cleaning.py:29\u001b[0m, in \u001b[0;36minitial_filter\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39minitial_filter\u001b[39m(df: pd\u001b[39m.\u001b[39mDataFrame)\u001b[39m-\u001b[39m\u001b[39m>\u001b[39m pd\u001b[39m.\u001b[39mDataFrame:\n\u001b[1;32m     21\u001b[0m \u001b[39m     \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[39m     applies a filter to a df, then splits the df into smaller sub dfs \u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[39m     based on 'langauage' and further cleans them by dropping\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[39m          pd.DataFrame\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[39m     \"\"\"\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m      filtered \u001b[39m=\u001b[39m df[(\u001b[39m~\u001b[39mdf[\u001b[39m'\u001b[39m\u001b[39mnoun\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mcontains(\u001b[39m'\u001b[39m\u001b[39m-| |\u001b[39m\u001b[39m\\\u001b[39m\u001b[39m.|1|2|3|4|5|6|7|8|9|0\u001b[39m\u001b[39m'\u001b[39m)) \u001b[39m&\u001b[39m (\u001b[39m~\u001b[39mdf[\u001b[39m'\u001b[39m\u001b[39mnoun\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39misupper()) \u001b[39m&\u001b[39m (df[\u001b[39m'\u001b[39;49m\u001b[39mnoun\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mstr\u001b[39m.\u001b[39;49mlen \u001b[39m>\u001b[39;49m \u001b[39m3\u001b[39;49m)]\n\u001b[1;32m     30\u001b[0m      dfs \u001b[39m=\u001b[39m split_df(filtered)\n\u001b[1;32m     31\u001b[0m      \u001b[39mreturn\u001b[39;00m pd\u001b[39m.\u001b[39mconcat([df\u001b[39m.\u001b[39mdrop_duplicates(subset\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mnoun\u001b[39m\u001b[39m\"\u001b[39m, keep\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m) \u001b[39mfor\u001b[39;00m df \u001b[39min\u001b[39;00m dfs])\n",
+      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'method' and 'int'"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
     "# read json file and load it as a DataFrame\n",
     "path = '../data/raw_scraped_data.json'\n",
     "df = raw_json_to_clean_df(path)"
@@ -393,8 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X =  trans_df.iloc[:, 4:]\n",
-    "y = trans_df['gender']"
+    "X, y "
    ]
   },
   {
