--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import sys\n",
     "sys.path.insert(0, '../src/')\n",
     "from data_cleaning import raw_json_to_clean_df\n",
-    "from data_transformation import transform_clean_df, get_X_y, get_dist\n",
+    "from data_transformation import transform, get_X_y, distribution\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.linear_model import Perceptron\n"
@@ -47,23 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'method' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# read json file and load it as a DataFrame\u001b[39;00m\n\u001b[1;32m      2\u001b[0m path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m../data/raw_scraped_data.json\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> 3\u001b[0m df \u001b[39m=\u001b[39m raw_json_to_clean_df(path)\n",
-      "File \u001b[0;32m~/Uni/S2/Ad Morpho/Project/-Morphology-Gender-assignment/notebooks/../src/data_cleaning.py:111\u001b[0m, in \u001b[0;36mraw_json_to_clean_df\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mraw_json_to_clean_df\u001b[39m(path: \u001b[39mstr\u001b[39m)\u001b[39m-\u001b[39m\u001b[39m>\u001b[39m pd\u001b[39m.\u001b[39mDataFrame:\n\u001b[1;32m    104\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    105\u001b[0m \u001b[39m    reads in raw data json file , applies filters, \u001b[39;00m\n\u001b[1;32m    106\u001b[0m \u001b[39m    and returns a final and clean df to be used on an NLP model\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[39m        pd.DataFrame\u001b[39;00m\n\u001b[1;32m    110\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 111\u001b[0m     filtered_df \u001b[39m=\u001b[39m initial_filter(pd\u001b[39m.\u001b[39;49mread_json(path))\n\u001b[1;32m    112\u001b[0m     \u001b[39mreturn\u001b[39;00m clean_df(filtered_df)\n",
-      "File \u001b[0;32m~/Uni/S2/Ad Morpho/Project/-Morphology-Gender-assignment/notebooks/../src/data_cleaning.py:29\u001b[0m, in \u001b[0;36minitial_filter\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39minitial_filter\u001b[39m(df: pd\u001b[39m.\u001b[39mDataFrame)\u001b[39m-\u001b[39m\u001b[39m>\u001b[39m pd\u001b[39m.\u001b[39mDataFrame:\n\u001b[1;32m     21\u001b[0m \u001b[39m     \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[39m     applies a filter to a df, then splits the df into smaller sub dfs \u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[39m     based on 'langauage' and further cleans them by dropping\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[39m          pd.DataFrame\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[39m     \"\"\"\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m      filtered \u001b[39m=\u001b[39m df[(\u001b[39m~\u001b[39mdf[\u001b[39m'\u001b[39m\u001b[39mnoun\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mcontains(\u001b[39m'\u001b[39m\u001b[39m-| |\u001b[39m\u001b[39m\\\u001b[39m\u001b[39m.|1|2|3|4|5|6|7|8|9|0\u001b[39m\u001b[39m'\u001b[39m)) \u001b[39m&\u001b[39m (\u001b[39m~\u001b[39mdf[\u001b[39m'\u001b[39m\u001b[39mnoun\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39misupper()) \u001b[39m&\u001b[39m (df[\u001b[39m'\u001b[39;49m\u001b[39mnoun\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mstr\u001b[39m.\u001b[39;49mlen \u001b[39m>\u001b[39;49m \u001b[39m3\u001b[39;49m)]\n\u001b[1;32m     30\u001b[0m      dfs \u001b[39m=\u001b[39m split_df(filtered)\n\u001b[1;32m     31\u001b[0m      \u001b[39mreturn\u001b[39;00m pd\u001b[39m.\u001b[39mconcat([df\u001b[39m.\u001b[39mdrop_duplicates(subset\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mnoun\u001b[39m\u001b[39m\"\u001b[39m, keep\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m) \u001b[39mfor\u001b[39;00m df \u001b[39min\u001b[39;00m dfs])\n",
-      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'method' and 'int'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read json file and load it as a DataFrame\n",
     "path = '../data/raw_scraped_data.json'\n",
@@ -72,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +137,7 @@
        "4  abatacept  abatacept  masculine  Polish"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,15 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/capeta/Uni/S2/Ad Morpho/Project/-Morphology-Gender-assignment/notebooks/../src/data/data_transformation.py:14: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
-      "  reduced_df = df.groupby(['lang', 'gender'])['noun', 'lemma', 'gender', 'lang'].sample(n=3000)\n",
+      "/home/capeta/Uni/S2/Ad Morpho/Project/-Morphology-Gender-assignment/notebooks/../src/data_transformation.py:15: FutureWarning: The default value of numeric_only in DataFrame.min is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "  lowest = distribution(df).min()[0]\n",
+      "/home/capeta/Uni/S2/Ad Morpho/Project/-Morphology-Gender-assignment/notebooks/../src/data_transformation.py:16: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "  reduced_df = df.groupby(['lang', 'gender'])['noun', 'lemma', 'gender', 'lang'].sample(n=lowest)\n",
       "/home/capeta/.local/share/virtualenvs/-Morphology-Gender-assignment-lrLn6GZY/lib/python3.10/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
       "  warnings.warn(\n"
      ]
@@ -217,23 +205,23 @@
        "      <th>4</th>\n",
        "      <th>5</th>\n",
        "      <th>...</th>\n",
-       "      <th>2445</th>\n",
-       "      <th>2446</th>\n",
-       "      <th>2447</th>\n",
-       "      <th>2448</th>\n",
-       "      <th>2449</th>\n",
-       "      <th>2450</th>\n",
-       "      <th>2451</th>\n",
-       "      <th>2452</th>\n",
-       "      <th>2453</th>\n",
-       "      <th>2454</th>\n",
+       "      <th>5848</th>\n",
+       "      <th>5849</th>\n",
+       "      <th>5850</th>\n",
+       "      <th>5851</th>\n",
+       "      <th>5852</th>\n",
+       "      <th>5853</th>\n",
+       "      <th>5854</th>\n",
+       "      <th>5855</th>\n",
+       "      <th>5856</th>\n",
+       "      <th>5857</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>cafétérie</td>\n",
-       "      <td>cafétéria</td>\n",
+       "      <td>badauderie</td>\n",
+       "      <td>Badauderie</td>\n",
        "      <td>feminine</td>\n",
        "      <td>French</td>\n",
        "      <td>0.0</td>\n",
@@ -256,8 +244,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>iconographie</td>\n",
-       "      <td>iconographie</td>\n",
+       "      <td>féculerie</td>\n",
+       "      <td>féculeria</td>\n",
        "      <td>feminine</td>\n",
        "      <td>French</td>\n",
        "      <td>0.0</td>\n",
@@ -280,8 +268,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>oniomanie</td>\n",
-       "      <td>oniomanie</td>\n",
+       "      <td>rando</td>\n",
+       "      <td>rar</td>\n",
        "      <td>feminine</td>\n",
        "      <td>French</td>\n",
        "      <td>0.0</td>\n",
@@ -304,8 +292,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>baïonnette</td>\n",
-       "      <td>baïonnette</td>\n",
+       "      <td>panthéiste</td>\n",
+       "      <td>panthéiste</td>\n",
        "      <td>feminine</td>\n",
        "      <td>French</td>\n",
        "      <td>0.0</td>\n",
@@ -328,8 +316,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Walcourt</td>\n",
-       "      <td>Walcourt</td>\n",
+       "      <td>tabagie</td>\n",
+       "      <td>tabagi</td>\n",
        "      <td>feminine</td>\n",
        "      <td>French</td>\n",
        "      <td>0.0</td>\n",
@@ -352,34 +340,34 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 2459 columns</p>\n",
+       "<p>5 rows × 5862 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           noun         lemma    gender    lang    0    1    2    3    4    5  \\\n",
-       "0     cafétérie     cafétéria  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "1  iconographie  iconographie  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "2     oniomanie     oniomanie  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "3    baïonnette    baïonnette  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "4      Walcourt      Walcourt  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "         noun       lemma    gender    lang    0    1    2    3    4    5  \\\n",
+       "0  badauderie  Badauderie  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "1   féculerie   féculeria  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "2       rando         rar  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "3  panthéiste  panthéiste  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "4     tabagie      tabagi  feminine  French  0.0  0.0  0.0  0.0  0.0  0.0   \n",
        "\n",
-       "   ...  2445  2446  2447  2448  2449  2450  2451  2452  2453  2454  \n",
+       "   ...  5848  5849  5850  5851  5852  5853  5854  5855  5856  5857  \n",
        "0  ...   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
        "1  ...   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
        "2  ...   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
        "3  ...   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
        "4  ...   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
        "\n",
-       "[5 rows x 2459 columns]"
+       "[5 rows x 5862 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trans_df = transform_clean_df(df)\n",
+    "trans_df = transform(df)\n",
     "trans_df.head(5)"
    ]
   },
@@ -401,11 +389,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y "
+    "X, y = get_X_y(trans_df)"
    ]
   },
   {
@@ -418,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,16 +423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8421666666666666"
+       "0.8468354430379746"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,16 +453,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8773333333333333"
+       "0.8981012658227848"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
